--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -10,37 +10,46 @@
   gap: 50px;
 }
 
-.title{
-font-size: 96px;
+.title {
+  font-size: 96px;
 }
 
-.desc{
-    font-size: 20px;
+.desc {
+  font-size: 20px;
 }
 
-.buttons{
-    display: flex;
-    gap: 20px;
+.buttons {
+  display: flex;
+  gap: 20px;
 }
 
-.button{
-    padding: 20px;
-    min-width: 120px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
+.button {
+  padding: 20px;
+  min-width: 120px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  transition: 0.1s;
 }
 
-.button:first-child{
-    background-color: var(--btn);
-    color: var(--text)
+.button:first-child {
+  background-color: var(--btn);
+  color: var(--text);
 }
 
-.brands{
-    width: 500px;
-    height: 50px;
-    position: relative;
-    filter: grayscale(1);
+.button:first-child:hover {
+  background-color: #2d5ed1;
+}
+
+.button:nth-child(2):hover {
+  background-color: #cecece;
+}
+
+.brands {
+  width: 500px;
+  height: 50px;
+  position: relative;
+  filter: grayscale(1);
 }
 
 .imgContainer {
