Single blog page

--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -29,14 +29,14 @@
   justify-content: space-between;
 }
 
-.box{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+.box {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.box h1{
-    color: var(--btn);
+.box h1 {
+  color: var(--btn);
 }
 
 .imgContainer {
@@ -44,6 +44,18 @@
   position: relative;
 }
 
-.img{
-    object-fit:contain;
+.img {
+  object-fit: contain;
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .boxes {
+    flex-direction: column;
+    gap: 50px;
+  }
 }
