--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -47,3 +47,9 @@
 .form button:hover {
   background-color: #2d5ed1;
 }
+
+@media (max-width: 768px) {
+  .container{
+    flex-direction: column;
+  }
+}
